# jvm-getter

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pr-build.yml  pr-test-desktop.yml  publish.yml
jvm-getter/: Cargo.toml
jvm-getter-tests/: .gitignore  Cargo.toml  build.gradle.kts  settings.gradle.kts
jvm-getter-tests/gradle/: libs.versions.toml
jvm-getter-tests/src/androidInstrumentedTest/kotlin/: JvmGetterTests.kt
jvm-getter-tests/src/androidUnitTest/kotlin/: JvmGetterTests.kt
jvm-getter-tests/src/commonMain/kotlin/: SimpleObject.kt
jvm-getter-tests/src/commonMain/rust/: lib.rs
jvm-getter-tests/src/jvmTest/kotlin/: JvmGetterTests.kt
jvm-getter/src/: android.rs  lib.rs  unix.rs  windows.rs
