[package]
name = "jvm-getter-tests"
description = "Unit tests for jvm-getter"
homepage = "https://github.com/gobley/jvm-getter"
repository = "https://github.com/gobley/jvm-getter"
readme = "../README.md"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
authors = ["Chanjung Kim <chanjungkim@paxbun.dev>"]
publish = false

[lib]
path = "src/commonMain/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
jvm-getter = { path = "../jvm-getter" }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"] }
uniffi = { version = "=0.28.3", features = ["tokio"] }
