[package]
name = "jvm-getter-tests"
description = "Unit tests for jvm-getter"
homepage = "https://github.com/gobley/jvm-getter"
repository = "https://github.com/gobley/jvm-getter"
readme = "../README.md"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Chanjung Kim <chanjungkim@paxbun.dev>"]
publish = false

[lib]
path = "src/commonMain/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
jvm-getter = { path = "../jvm-getter", default-features = false }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"] }
uniffi = { version = "=0.29.3", features = ["tokio"] }

[features]
sym-search = ["jvm-getter/sym-search"]
art-parsing = ["jvm-getter/art-parsing"]
