[package]
name = "jvm-getter"
description = "JNI_GetCreatedJavaVMs for Android API 30 or lower"
homepage = "https://github.com/gobley/jvm-getter"
repository = "https://github.com/gobley/jvm-getter"
readme = "../README.md"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
authors = ["Chanjung Kim <chanjungkim@paxbun.dev>"]
categories = ["no-std", "os::android-apis"]
keywords = ["java", "jni", "android"]
license = "MIT OR Apache-2.0"

[dependencies]
goblin = { version = "0.9", default-features = false, features = [
    "elf64",
    "elf32",
    "endian_fd",
] }
jni-sys = "0.3"

[target.'cfg(target_family = "unix")'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", default-features = false, features = [
    "Win32_System_LibraryLoader",
] }
